--- a/practice_1/part_1.ipynb
+++ b/practice_1/part_1.ipynb
@@ -28,13 +28,494 @@
     "\n",
     "Floating point numbers in Python are notable because they have a decimal point in them, or use an exponential (e) to define the number. For example 2.0 and -2.1 are examples of floating point numbers. 4E2 (4 times 10 to the power of 2) is also an example of a floating point number in Python. \n",
     "\n",
-    "Here is a table of the two main types we will spend most of our time "
+    "Here is a table of the two main types we will spend most of our time with some examples in this tutorial:\n",
+    "\n",
+    "| **Examples**         | **Number Type**            |\n",
+    "|------------------|------------------------|\n",
+    "| 1,2,-5,1000      | Integers               |\n",
+    "| 1.2,-0.5,2e2,3E2 | Floating-point numbers |\n",
+    "\n",
+    "Now let's start with some basic arithmetic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b1121c4",
+   "metadata": {},
+   "source": [
+    "## Basic Arithmetic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e21518e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Addition\n",
+    "2 + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "49405221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Subtraction\n",
+    "2 - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4b17994c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiplication\n",
+    "2 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ba053bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Division\n",
+    "3 / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1556e0d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Floor Division\n",
+    "7 // 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd48ed7",
+   "metadata": {},
+   "source": [
+    "**Last time I checked, 7 divided by 4 equals 1.75 not 1!**\n",
+    "\n",
+    "The reason we get this result is because we are using \"floor division\". The // operator (two forward slashes) truncates the decimal without rounding, and returns an integer result.\n",
+    "\n",
+    "**What if we just want the remainder after division?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4ee0d050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Modulo\n",
+    "7 % 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e67a084f",
+   "metadata": {},
+   "source": [
+    "4 goes into 7 once, with a remainder of 3. The % operator returns the remainder after division\n",
+    "\n",
+    "### Arithmetic continued"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "01f4bf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Powers\n",
+    "2 ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9e0b127f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can also do roots this way\n",
+    "4 ** 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c7628f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "105"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# order of operations followed in Python\n",
+    "2 + 10 * 10 + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4bd82795",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can use parentheses to specify orders\n",
+    "(2 + 10) * (10 + 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcb9bc10",
+   "metadata": {},
+   "source": [
+    "## Variable Assignments\n",
+    "\n",
+    "Now that we've seen how to use numbers in Python as a calculator let's see how we can assign names and create variables.\n",
+    "\n",
+    "We use a single equals sign to assign labels to variables. Let's see a few examples of how we can do this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "788e009b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create an object called \"a\" and assign it the number 5\n",
+    "a = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4bfb6cf",
+   "metadata": {},
+   "source": [
+    "Now if I call *a* in my Python script, Python will treat it as the number 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "da186665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding the objects\n",
+    "a + a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f750fcc4",
+   "metadata": {},
+   "source": [
+    "What happens on reassignment? Will Python let us write it over?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3feb31d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reassignment\n",
+    "a = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c34b2edc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b957bf83",
+   "metadata": {},
+   "source": [
+    "Yes, Python allows you to write over assigned variable names. We can also use the variables themselves when doing the reassignment. Here is an example of what I mean:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "76b3dc14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7910af8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use A to redefine A\n",
+    "a = a + a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d0d41985",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10fd16ac",
+   "metadata": {},
+   "source": [
+    "The names you use when creating these labels need to follow a few rules:\n",
+    "\n",
+    "    1. Names can not start with a number.\n",
+    "    2. There can be no spaces in the name, use _ instead.\n",
+    "    3. Can't use any of these symbols: '\", <>/?|\\()!@#$%^&*~-+\n",
+    "    4. It's considered best practicie (PEP8) that names are lowercase.\n",
+    "    5. Avoid using the characters 'l' (lowercase letter el), '0' (uppercase     letter oh), or 'I' (uppercase letter eye) as single character variable names. \n",
+    "    6. Avoid using words that have special meaning in Python like \"list\" and \"str\"\n",
+    "\n",
+    "Using variable names can be very useful way to keep track of different variables in Python. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9699b6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use object names to keep better track of what's going on in your code!\n",
+    "my_income = 100\n",
+    "\n",
+    "tax_rate = 0.1\n",
+    "\n",
+    "my_taxes = my_income * tax_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2500bbe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show my taxes!\n",
+    "my_taxes"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "testenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
