--- a/practice_1/practice_1/part_3.ipynb
+++ b/practice_1/practice_1/part_3.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "7e73893d",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "f29cf348",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "'This is also a string'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "78e041ff",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "'String built with double quotes'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "4e29c1a9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
      "evalue": "invalid syntax (1949007702.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'I'm using single quotes, but this will create an error'\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[47], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'I'm using single quotes, but this will create an error'\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "371db4a0",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "\"Now I'm ready to use the single quotes inside a string!\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "3d8447a4",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "9d3a77eb",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "'Hello World 2'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,636 @@
    "cell_type": "markdown",
    "id": "7dbaf9a8",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can use a print statement to print a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ae2d6feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World 1\n",
+      "Hello World 2\n",
+      "Use \n",
+      " to print a new line\n",
+      "\n",
+      "\n",
+      "See what I mean?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World 1')\n",
+    "print('Hello World 2')\n",
+    "print('Use \\n to print a new line')\n",
+    "print('\\n')\n",
+    "print('See what I mean?')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5fee809",
+   "metadata": {},
+   "source": [
+    "## String Basics\n",
+    "We can also use a function called len() to check the length of a string!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c7f87c5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('Hello World')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34aff985",
+   "metadata": {},
+   "source": [
+    "Python's built-in len() function counts all of the characters in the string, including spaces and punctuation.\n",
+    "\n",
+    "## String Indexing\n",
+    "We know strings are a sequence, which means Python can use indexes to call parts of the sequence. Let's learn hoe this works.\n",
+    "\n",
+    "In Python, we use brackets **[]** after an object to call its index. We should also note that indexing starts at 0 for Python. Let's create a new object called s and then walk through a few examples of indexing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "bff91db6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assign s as a string\n",
+    "s = 'Hello World'\n",
+    "\n",
+    "# Check\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3013525c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the object\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7163bb82",
+   "metadata": {},
+   "source": [
+    "Let's start indexing!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0e1d5fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'H'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show first element (in this case a letter)\n",
+    "s[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "325037c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b1f4f5cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd4e33a",
+   "metadata": {},
+   "source": [
+    "We can use **:** to perform *slicing* which grabs everything up to designated point. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9573fda1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ello World'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab everything past the first term all the way to the length of s which is len(s)\n",
+    "s[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a06271d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Note that there is no change to the original s\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "6c5133f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hel'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab everything UP to the 3rd index\n",
+    "s[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e237b4fb",
+   "metadata": {},
+   "source": [
+    "Note the above slicing. Here we're telling Python to grab everything from 0 up to 3. It doesn't include the 3rd index. You'll notice this a lot in Python, where statements and are usually in the context of \"up to, but not including\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "606d904d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Everything\n",
+    "s[:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad223a22",
+   "metadata": {},
+   "source": [
+    "We can also use negative indexing to go backwards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "4575886b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Last letter (one index behind 0 so it loops back aorund)\n",
+    "s[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "150ee383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Worl'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab everything but the last letter\n",
+    "s[:-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "959c3fa1",
+   "metadata": {},
+   "source": [
+    "We can also use index and slice notation to grab elements of a sequence by a specified step size (the default is 1). For instance, we can use two colons in a row and then a number specifying the frequency to grab elements. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8698172e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab everything, but go in steps size of 1\n",
+    "s[::1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "98d6293f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HloWrd'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab everything, but go in step sizes of 2\n",
+    "s[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "ba3f1d88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dlroW olleH'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can use this to print a string backwards\n",
+    "s[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67efa13d",
+   "metadata": {},
+   "source": [
+    "## String Properties\n",
+    "It's important to notes that strings have an important property known as *immutability*. This means that once a string is created, the elements within it can not be changed or replaced. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f02312e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "46b84770",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Let's try to change the first letter to 'x\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m s[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's try to change the first letter to 'x\n",
+    "s[0] = 'x'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e648d000",
+   "metadata": {},
+   "source": [
+    "Notice how the error tells us what we can't do, change the item assignment!\n",
+    "\n",
+    "Something we *can* do is concatenate strings!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "5dab941d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "e6a8497e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World concatenate me!'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Concatenate strings!\n",
+    "s + ' concatenate me!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "48829417",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can reassign s completely though!\n",
+    "s = s + ' concatenate me!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "330c06e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World concatenate me!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "dfdbc880",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World concatenate me!'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd7fabec",
+   "metadata": {},
+   "source": [
+    "We can use the multiplication symbol to create repetition!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "688a0dfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "letter = 'z'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1e24feee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zzzzzzzzzz'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letter*10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b372ea8a",
+   "metadata": {},
+   "source": [
+    "## Basic Built-in String methods\n",
+    "Objects in Python usually have built-in methods. These methods are functions inside the object (we will learn about these in much more depth later) that can peform actions or commands on the object itself.\n",
+    "\n",
+    "We call methods with a period and then the method name. Methods are in the form:\n",
+    "\n",
+    "object.method(parameters)\n",
+    "\n",
+    "where parameters are extra arguments we can pass into the method."
+   ]
   }
  ],
  "metadata": {
