--- a/practice_1/practice_1/part_3.ipynb
+++ b/practice_1/practice_1/part_3.ipynb
@@ -831,7 +831,9 @@
     "\n",
     "object.method(parameters)\n",
     "\n",
-    "where parameters are extra arguments we can pass into the method."
+    "where parameters are extra arguments we can pass into the method.\n",
+    "\n",
+    "Here are some examples of built-in methods in"
    ]
   }
  ],
