--- a/practice_1/practice_1/part_3.ipynb
+++ b/practice_1/practice_1/part_3.ipynb
@@ -11,12 +11,12 @@
     "\n",
     "In this lesson, we'll learn about the following:\n",
     "\n",
-    "    1. Creating Strings\n",
-    "    2. Printing Strings\n",
-    "    3. String Indexing and Slicing\n",
-    "    4. String Properties\n",
-    "    5. String Methods\n",
-    "    6. Print Formatting\n",
+    "1. Creating Strings\n",
+    "2. Printing Strings\n",
+    "3. String Indexing and Slicing\n",
+    "4. String Properties\n",
+    "5. String Methods\n",
+    "6. Print Formatting\n",
     "\n",
     "## Creating a String\n",
     "To create a string in Python, you need to use either single quotes or double quotes. For example"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "id": "7e73893d",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "id": "f29cf348",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "'This is also a string'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "78e041ff",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "'String built with double quotes'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "4e29c1a9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
      "evalue": "invalid syntax (1949007702.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[47], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'I'm using single quotes, but this will create an error'\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[42], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'I'm using single quotes, but this will create an error'\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -118,21 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "371db4a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Now I'm ready to use the single quotes inside a string!\""
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"Now I'm ready to use the single quotes inside a string!\""
    ]
@@ -156,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "3d8447a4",
    "metadata": {},
    "outputs": [
@@ -166,7 +155,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "9d3a77eb",
    "metadata": {},
    "outputs": [
@@ -188,7 +177,7 @@
        "'Hello World 2'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "id": "ae2d6feb",
    "metadata": {},
    "outputs": [
@@ -240,13 +229,13 @@
    "id": "b5fee809",
    "metadata": {},
    "source": [
-    "## String Basics\n",
+    "### String Basics\n",
     "We can also use a function called len() to check the length of a string!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "id": "c7f87c5f",
    "metadata": {},
    "outputs": [
@@ -256,7 +245,7 @@
        "11"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "id": "bff91db6",
    "metadata": {},
    "outputs": [
@@ -290,7 +279,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "id": "3013525c",
    "metadata": {},
    "outputs": [
@@ -332,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "id": "0e1d5fc8",
    "metadata": {},
    "outputs": [
@@ -342,7 +331,7 @@
        "'H'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "id": "325037c7",
    "metadata": {},
    "outputs": [
@@ -364,7 +353,7 @@
        "'e'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "id": "b1f4f5cb",
    "metadata": {},
    "outputs": [
@@ -385,7 +374,7 @@
        "'l'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "id": "9573fda1",
    "metadata": {},
    "outputs": [
@@ -414,7 +403,7 @@
        "'ello World'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "id": "a06271d0",
    "metadata": {},
    "outputs": [
@@ -436,7 +425,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "id": "6c5133f5",
    "metadata": {},
    "outputs": [
@@ -458,7 +447,7 @@
        "'Hel'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "id": "606d904d",
    "metadata": {},
    "outputs": [
@@ -488,7 +477,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "id": "4575886b",
    "metadata": {},
    "outputs": [
@@ -518,7 +507,7 @@
        "'d'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "id": "150ee383",
    "metadata": {},
    "outputs": [
@@ -540,7 +529,7 @@
        "'Hello Worl'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "id": "8698172e",
    "metadata": {},
    "outputs": [
@@ -570,7 +559,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "id": "98d6293f",
    "metadata": {},
    "outputs": [
@@ -592,7 +581,7 @@
        "'HloWrd'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "id": "ba3f1d88",
    "metadata": {},
    "outputs": [
@@ -614,7 +603,7 @@
        "'dlroW olleH'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "id": "f02312e6",
    "metadata": {},
    "outputs": [
@@ -645,7 +634,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "id": "46b84770",
    "metadata": {},
    "outputs": [
@@ -667,7 +656,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[68], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Let's try to change the first letter to 'x\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m s[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Cell \u001b[1;32mIn[62], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Let's try to change the first letter to 'x\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m s[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -689,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 63,
    "id": "5dab941d",
    "metadata": {},
    "outputs": [
@@ -699,7 +688,7 @@
        "'Hello World'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "id": "e6a8497e",
    "metadata": {},
    "outputs": [
@@ -720,7 +709,7 @@
        "'Hello World concatenate me!'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 65,
    "id": "48829417",
    "metadata": {},
    "outputs": [],
@@ -743,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "id": "330c06e4",
    "metadata": {},
    "outputs": [
@@ -761,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 67,
    "id": "dfdbc880",
    "metadata": {},
    "outputs": [
@@ -771,7 +760,7 @@
        "'Hello World concatenate me!'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "id": "688a0dfd",
    "metadata": {},
    "outputs": [],
@@ -800,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 69,
    "id": "1e24feee",
    "metadata": {},
    "outputs": [
@@ -810,7 +799,7 @@
        "'zzzzzzzzzz'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +813,7 @@
    "id": "b372ea8a",
    "metadata": {},
    "source": [
-    "## Basic Built-in String methods\n",
+    "### Basic Built-in String methods\n",
     "Objects in Python usually have built-in methods. These methods are functions inside the object (we will learn about these in much more depth later) that can peform actions or commands on the object itself.\n",
     "\n",
     "We call methods with a period and then the method name. Methods are in the form:\n",
@@ -833,7 +822,148 @@
     "\n",
     "where parameters are extra arguments we can pass into the method.\n",
     "\n",
-    "Here are some examples of built-in methods in"
+    "Here are some examples of built-in methods in strings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "8ffcd296",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World concatenate me!'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ff0626ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO WORLD CONCATENATE ME!'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Uppercase a string\n",
+    "s.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "adff65ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello world concatenate me!'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lowercase\n",
+    "s.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d77cce67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello', 'World', 'concatenate', 'me!']"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split a string by blank space (this is the default)\n",
+    "s.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "54c04240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello ', 'orld concatenate me!']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split by a specific element (doesn't include the element that was split on)\n",
+    "s.split('W')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c3405c",
+   "metadata": {},
+   "source": [
+    "## Print Formatting\n",
+    "We can use the .format() method to add formatted objects to printed string statements.\n",
+    "\n",
+    "The easiest way to show this is through an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "175d2c28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Insert another string with curly braces: The inserted string'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Insert another string with curly braces: {}'.format('The inserted string')"
    ]
   }
  ],
