--- a/practice_1/practice_1/part_4.ipynb
+++ b/practice_1/practice_1/part_4.ipynb
@@ -68,6 +68,81 @@
     "x, y = 'some', 'more'\n",
     "print(\"I'm going to inject %s text here, and %s text here.\"%(x,y))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7665f3f1",
+   "metadata": {},
+   "source": [
+    "## Format converison methods\n",
+    "It should be noted that two methods ```%s``` and ```%r``` convert any python object to a string using two separate methods: ```str()``` and ```repr()```. We will learn more about these functions later on in the course, but you should note that ```%r``` and ```repr()``` deliver the *string representation* of the object, including quotation marks and any escape characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d673fea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('He said his name was %s.' %'Fred')\n",
+    "print('He said his name was %r.' %'Fred')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0320f94",
+   "metadata": {},
+   "source": [
+    "As another example, ```\\t``` inserts a tab into a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5394aa57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('I once caught a fish %s' %'this \\tbig')\n",
+    "print('I once caught a fish %r' %'this \\tbig')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79207fa0",
+   "metadata": {},
+   "source": [
+    "The ``%s`` operator converts whatever it sees into a string, including integers and floats. The ``%d`` operator converts numbers to integers first, without rounding. Note the difference below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5130eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('I wrote %s programs today.' %3.75)\n",
+    "print(\"I wrote %d programs today.\" %3.75)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb69b0e8",
+   "metadata": {},
+   "source": [
+    "## Padding and Precision of Floating Point Numbers\n",
+    "Floating point numbers use the format ``%5.2f``. Here, ``5`` would be the minimum number of characters the string should contain; these may be padded with whtitespace if the entire number does not have this many digits. Next to this, ``.2f`` stands for how many numbers to show past the decimal point. Let's see some exmamples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f64527",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
